--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "motion": "^12.0.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwindcss": "^4.0.0",
+    "vite": "^5.4.10"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "@types/node": "^22.0.0",
+    "autoprefixer": "^10.4.20"
   }
 }
